Fixing tab spacing
git-svn-id: https://plugins.svn.wordpress.org/templ33t/branches/01_db_config@415166 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templ33t.css
+++ b/templ33t.css
@@ -35,6 +35,7 @@ div#templ33t_control {
 }
 
 a#templ33t_prev {
+	display: none;
 	height: 26px;
 	left: 0px;
 	line-height: 26px;
@@ -52,6 +53,7 @@ a#templ33t_prev {
 }
 
 a#templ33t_next {
+	display: none;
 	height: 26px;
 	line-height: 26px;
 	position: absolute;
